# shiso

./: .gitignore  AGENTS.md  PLAN-fast-sync.md  README.md  TASKS.md  alembic.ini  justfile  pyproject.toml
.github/workflows/: opencode.yml
docs/superpowers/plans/: 2026-03-26-import-panel-redesign.md
docs/superpowers/specs/: 2026-03-24-rewards-as-assets-design.md  2026-03-25-contract-based-validation.md  2026-03-26-import-panel-redesign.md
scripts/: backfill_account_login_id.py
shiso/: cli.py
shiso/dashboard/: __init__.py  main.py
shiso/dashboard/frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
shiso/dashboard/frontend/src/: App.vue  api.js  helpers.js  main.js  style.css
shiso/scraper/: _logging.py  agent_sessions.py  api.py  database.py  launch_chrome.py  worker.py
shiso/scraper/agent/: analyst.py  auth.py  llm.py  pdf_utils.py  playbooks.py  prompts.py  run.py  scraper.py  smart_tune.py  workflow_drafts.py
shiso/scraper/alembic/: env.py
shiso/scraper/alembic/versions/: 001_initial.py  002_add_is_deleted.py  003_workflow_orchestration_fields.py  004_auto_sync_enabled.py  005_rewards_login_membership.py  80fc688484a3_add_balance_types_lookup_table.py  bd34fc971a17_add_enrichment_fields_to_provider_mappings.py
shiso/scraper/config/: provider_hints.json  scraper.example.toml
shiso/scraper/models/: __init__.py  accounts.py  sync_type.py  tools.py
shiso/scraper/services/: accounts_db.py  crypto.py  password_import.py  provider_matcher.py  sync.py
shiso/scraper/tools/: __init__.py  workflows.py
tests/: conftest.py  test_account_sync.py  test_accounts_db.py  test_cli.py  test_crypto.py  test_dashboard_accounts.py  test_dashboard_ui.py  test_import_endpoints.py  test_interactive_auth.py  test_password_import.py  test_playbooks.py  test_sync_type.py  test_tools.py  test_workflow_drafts.py  test_workflow_suggestions.py
(+55 files in other folders)
