[project]
name = "shiso"
version = "0.1.0"
description = "Local-first, privacy-focused personal finance tracker"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    # Web framework
    "fastapi>=0.135.0",
    "uvicorn>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Browser automation
    "browser-use[cli]>=0.12.2",
    "playwright>=1.40.0",
    # Encryption
    "cryptography>=42.0.0",
    # PDF parsing
    "pdfplumber>=0.10.0",
    # CLI
    "typer>=0.15.0",
    "rich>=14.0.0",
    # Config
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "tomli-w>=1.2.0",
    "python-dotenv>=1.1.0",
    # Dev reload
    "watchfiles>=0.20.0",
    "jinja2>=3.1.6",
    # Code intelligence (MCP server)
    "srclight @ git+https://github.com/vvvanguards/srclight.git@develop",
    "pydantic-ai>=1.55.0",
    "anthropic>=0.76.0",
]

[project.scripts]
shiso = "shiso.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
